# RPA-Agent

./: .env.example  README.md  pyproject.toml  run_agent.py
scripts/: build-macos.sh  build-windows.ps1
src/local_rpa_agent/: actions.py  auto_cert.py  capabilities.py  client.py  config.py  data_pipeline.py  errors.py  gui.py  main.py  runner.py  storage.py  workflow.py  workflow_metadata.py
tests/: test_actions.py  test_capabilities.py  test_client_errors.py  test_data_pipeline.py  test_gui_helpers.py  test_local_templates.py  test_runner.py  test_workflow.py
