[project]
name = "local-rpa-agent"
version = "0.1.0"
description = "Local RPA Agent for AI Business SaaS automation workflows"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "typer>=0.12.0",
  "rich>=13.0.0"
]

[project.scripts]
local-rpa-agent = "local_rpa_agent.main:app"
local-rpa-agent-gui = "local_rpa_agent.gui:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
